--- a/demo.html
+++ b/demo.html
@@ -2,42 +2,133 @@
 <body>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script src="springy.js"></script>
+<script src="springyui.js"></script>
 
 <script>
-var graph = new Graph();
-
-var dennis = graph.newNode({label: 'Dennis'});
-var michael = graph.newNode({label: 'Michael'});
-var jessica = graph.newNode({label: 'Jessica'});
-var timothy = graph.newNode({label: 'Timothy'});
-var barbara = graph.newNode({label: 'Barbara'});
-var franklin = graph.newNode({label: 'Franklin'});
-var monty = graph.newNode({label: 'Monty'});
-var james = graph.newNode({label: 'James'});
-var bianca = graph.newNode({label: 'Bianca'});
-
-graph.newEdge(dennis, michael, {color: '#00A0B0'});
-graph.newEdge(michael, dennis, {color: '#6A4A3C'});
-graph.newEdge(michael, jessica, {color: '#CC333F'});
-graph.newEdge(jessica, barbara, {color: '#EB6841'});
-graph.newEdge(michael, timothy, {color: '#EDC951'});
-graph.newEdge(franklin, monty, {color: '#7DBE3C'});
-graph.newEdge(dennis, monty, {color: '#000000'});
-graph.newEdge(monty, james, {color: '#00A0B0'});
-graph.newEdge(barbara, timothy, {color: '#6A4A3C'});
-graph.newEdge(dennis, bianca, {color: '#CC333F'});
-graph.newEdge(bianca, monty, {color: '#EB6841'});
-
-jQuery(function(){
-	var springy = jQuery('#springydemo').springy({
-		graph: graph,
-		nodeSelected: function(node){
-			console.log('Node selected: ' + JSON.stringify(node.data));
-		}
-	});
+var first = false;
+var graph,springy;
+function redraw(p){
+if(!first){
+first=true;
+graph = new Graph();
+springy = jQuery('#springydemo').springy({
+	graph: graph
 });
-</script>
+}
 
+graph.filterEdges(function(){return false;});
+graph.filterNodes(function(){return false;});
+for(var i = 0;i<100;i++){
+	graph.newNode({label:''});
+}
+
+for(var source = 0;source<100;source++){
+	for(var destination = 0;destination<100;destination++){
+		if(Math.random() <= p){
+			graph.newEdge(graph.nodes[source],graph.nodes[destination],{directional:false});
+		}
+	}
+}
+}
+
+
+function eralpGraph(vertex_count) {
+	var edges = [];
+	var vertices = [];
+	var visited = [];
+	for(var i = 0;i<vertex_count;i++){
+		vertices.push(i);
+	}
+	
+	this.findComponent = function(){
+		var start_vertex = -1;
+		var component_set = [];
+
+		for(var i = 0;i<vertex_count;i++){
+			if(visited[i] == false){
+				start_vertex = i;
+				visited[i] = true;
+				break;
+			}
+		}
+		
+		if(start_vertex == -1)
+			return false;
+		
+		component_set.push(start_vertex);
+		
+		var set_size = 1;
+		
+		do{
+			add_size = 0;
+			for(var i = 0;i<set_size;i++){
+				current_vertex = component_set[i];
+				for(var edge_no = 0;edge_no<edges.length;edge_no++){
+					if(edges[edge_no][0] == current_vertex && !visited[edges[edge_no][1]])
+					{
+						component_set.unshift(edges[edge_no][1]);
+						visited[edges[edge_no][1]] = true;
+						add_size++;
+					}else if (edges[edge_no][1] == current_vertex && !visited[edges[edge_no][0]])
+					{
+						component_set.unshift(edges[edge_no][0]);
+						visited[edges[edge_no][0]] = true;
+						add_size++;
+					}
+				}
+			}
+			set_size = add_size;
+		}while(add_size>0);
+		
+		set_size = component_set.length;
+		return set_size;
+	}
+	
+	this.findLargestComponent = function() {
+		visited = [];
+		for(var i = 0;i<vertex_count;i++){
+			visited.push(false);
+		}
+		
+		largest_component_size = -1;
+		do{
+			var component_size = this.findComponent();
+			if(component_size > largest_component_size)
+				largest_component_size = component_size;
+		}while(component_size)
+		return largest_component_size;
+	}
+	
+
+	
+	this.addEdge = function(source,destination) {
+		edges.push([source,destination]);
+	}
+
+}
+
+function monteCarloSimulation(iterations,p){
+	var sum = 0;
+	for(var i = 0;i<iterations;i++){
+		var eg = new eralpGraph(100);
+		var p = 0.01;
+		for(var source = 0;source<100;source++){
+			for(var destination = 0;destination<100;destination++){
+				if(Math.random() <= p){
+					eg.addEdge(source,destination);
+				}
+			}
+		}
+		sum += eg.findLargestComponent();
+	}
+	console.log((sum)*1.0/iterations);
+}
+function main(){
+	
+}
+</script>
+<a href="#" onclick="monteCarloSimulation(500,0.01)">click</a>
+<a href="#" onclick="monteCarloSimulation(50)">click</a>
 <canvas id="springydemo" width="640" height="480" />
 </body>
 </html>
